syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "nem";
option java_outer_classname = "FieldTypeEmailConfig";

package nem;



message FieldTypeEmailConfig {  
    repeated string allow_domains = 1;
    repeated string exclude_domains = 2;    
}
